--- a/app/templates/drugs.html
+++ b/app/templates/drugs.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %} {% block title %}Search{% endblock %} {% block content
-%}
+{% extends 'base.html' %}
+{% block title %}Search{% endblock %}
+{% block content %}
 
-<div class="container">
-  <table class="table">
+<div class="container mt-5">
+  <h3 class="mb-4">Search Results</h3>
+  <table class="table table-striped table-hover table-bordered">
     <thead>
       <tr>
         <th scope="col">RxCUI</th>
@@ -11,25 +13,27 @@
       </tr>
     </thead>
     <tbody>
-      {% for med in meds %}
-      <tr>
-        <td scope="row">{{ med['rxcui'] }}</td>
-        <td scope="row">{{ med['name'] }}</td>
-        <td scope="row">{{ med['synonym'] }}</td>
-      </tr>
-      {% endfor %}
+      {% if meds %}
+        {% for med in meds %}
+        <tr>
+          <td>{{ med['rxcui'] }}</td>
+          <td>{{ med['name'] }}</td>
+          <td>{{ med['synonym'] }}</td>
+        </tr>
+        {% endfor %}
+      {% else %}
+        <tr>
+          <td colspan="3" class="text-center">No results found.</td>
+        </tr>
+      {% endif %}
     </tbody>
   </table>
 </div>
 
 <div class="text-center p-5">
-  <a
-    class="btn btn-primary"
-    style="background-color: #7185ab"
-    href="/search"
-    role="button"
-    >Back</a
-  >
+  <a class="btn btn-primary" style="background-color: #7185ab;" href="/search">
+    ⬅️ Back to Search
+  </a>
 </div>
 
 {% endblock %}
